--- a/mahoromaticdb/songs/goodmorning.html
+++ b/mahoromaticdb/songs/goodmorning.html
@@ -92,7 +92,7 @@
 <div class="line"><strong>Good morning</strong></div>
 </div>
 <div class="cn line-block">
-<div class="line"><a href="#id4"><span class="problematic" id="id5">*</span></a>Translated by 月の舞歌词站</div>
+<div class="line"><em>Translated by 月の舞歌词站</em></div>
 <div class="line"><br /></div>
 <div class="line">第一个早晨 心情好的早晨</div>
 <div class="line">把窗帘拉开 是不是有些刺眼</div>
