Update index; add missing spaces in lyrics

--- a/mahoromaticdb/songs/hiritsumusumehadateondo.html
+++ b/mahoromaticdb/songs/hiritsumusumehadateondo.html
@@ -58,36 +58,52 @@
 <div class="line">ぜんぶ　見せろなんて《HA!　ソレ、ソレ、ソレ》</div>
 <div class="line">ちらり　ちらり　いけません</div>
 <div class="line">夏はキケンすぎる</div>
+</div>
+<div class="ja line-block">
 <div class="line">アリャリャ　コリャリャ　いけません</div>
 <div class="line">どうぞ　やさしくして《HA!　ドシタ、ドシタ、ドシタ》</div>
 <div class="line">そうよ　女の子だって</div>
 <div class="line">ほんとは待っている？</div>
+</div>
+<div class="ja line-block">
 <div class="line">ふくらんじゃうよ</div>
 <div class="line">それは　ゆらゆら揺れて</div>
 <div class="line">いつか　こらえきれずに</div>
 <div class="line">ジッと　瞳みつめちゃって</div>
 <div class="line">「スキよ」って言うかも</div>
+</div>
+<div class="ja line-block">
 <div class="line">だめだめよ　ガマンして</div>
 <div class="line">煩悩なんか　蹴り上げて</div>
 <div class="line">この町の女の子は</div>
 <div class="line">なかなか手強いよ～ん</div>
+</div>
+<div class="ja line-block">
 <div class="line">まだよ　まだよ　いけません</div>
 <div class="line">ぜんぶ　欲しいなんて《HA!　ソレ、ソレ、ソレ》</div>
 <div class="line">とても　とても　できません</div>
 <div class="line">父が　許しません</div>
+</div>
+<div class="ja line-block">
 <div class="line">アレヤ　コレヤ　言い訳せずに</div>
 <div class="line">こっち向いて《HA～　ソレカラドシタ》</div>
 <div class="line">そうよ　ふらちな精神（こころ）</div>
 <div class="line">すっかり　お見通し</div>
+</div>
+<div class="ja line-block">
 <div class="line">モヤモヤしちゃう</div>
 <div class="line">切ない痛みなのよ</div>
 <div class="line">わかってあげたいけど</div>
 <div class="line">ごめん　なんだか怖いの</div>
 <div class="line">「キライ」って言っちゃえ</div>
+</div>
+<div class="ja line-block">
 <div class="line">だめだめよ　ガマンして</div>
 <div class="line">男の根性みせとくれ</div>
 <div class="line">いなせだね　カッチョイイね</div>
 <div class="line">背中で泣いてるね～ん</div>
+</div>
+<div class="ja line-block">
 <div class="line">夏囃子（なつばやし）《ワッショイ！》</div>
 <div class="line">ドーンと花火《ワッショイ！》</div>
 <div class="line">また逢いたいな　この緋立（ばしょ）で《HAI! HAI! HAI!》</div>
