--- a/mahoromaticdb/songs/ichininosanpeace.html
+++ b/mahoromaticdb/songs/ichininosanpeace.html
@@ -56,23 +56,39 @@
 <div class="line">はじめちゃいましょう　Hello!（Hello）</div>
 <div class="line">はじまっちゃうよ　WAO!（WAO）</div>
 <div class="line">ステキな時間をあげるよん</div>
+</div>
+<div class="ja line-block">
 <div class="line">食べちゃいたいよ　GAO!（GAO）</div>
 <div class="line">ガマンできない　WAO!（WAO）</div>
 <div class="line">はしたないのも　いいでしょ？</div>
+</div>
+<div class="ja line-block">
 <div class="line">ヤカマシ　カシマシ　アタシたち</div>
 <div class="line">スカートひらひら本音もチラリ（AH!）</div>
+</div>
+<div class="ja line-block">
 <div class="line">ねえ　やっと逢えるね　うれしい予感</div>
 <div class="line">平和なこの地球（ほし）で騒ぎまくりましょ</div>
+</div>
+<div class="ja line-block">
 <div class="line">限界なんか　Night Yeah!（ナイヤイ）</div>
 <div class="line">はじまっちゃうよ　All right!（オーライ）</div>
 <div class="line">ワタシたちって　最高っ（サイコー、サイコー）</div>
+</div>
+<div class="ja line-block">
 <div class="line">メニューいろいろ　どーだい？（どーだい）</div>
 <div class="line">単品？セットでLunch?（ランチ）</div>
 <div class="line">君のおごりで　ヨロシク（ごち～）</div>
+</div>
+<div class="ja line-block">
 <div class="line">春だし　サクラも　みだれ咲き</div>
 <div class="line">いまより　もっともっと　カゲキになろう（AH!）</div>
+</div>
+<div class="ja line-block">
 <div class="line">ほら　ここにおいでよ　不思議な気持ち</div>
 <div class="line">みんなで歌ったら　楽しくなれるハズ</div>
+</div>
+<div class="ja line-block">
 <div class="line">ねえ　やっと逢えたね　うれしい予感</div>
 <div class="line">平和なこの地球（ほし）で騒ぎまくりましょう</div>
 <div class="line">いち、にの、さんっ、で、Peace!</div>
