--- a/mahoromaticdb/songs/kanchigaihouken.html
+++ b/mahoromaticdb/songs/kanchigaihouken.html
@@ -58,34 +58,48 @@
 <div class="line">こうなりゃ朝まで　Dancin&#8217; dancin&#8217;</div>
 <div class="line">アタシはアタシを止められない</div>
 <div class="line">「ぷは～～～っ、今夜もしみるわ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">見栄っ張りだけれど、自信もあるけれど</div>
 <div class="line">給料安いけど　オジサンもうイッパ～イ！</div>
 <div class="line">こうなりゃ朝まで　Drinkin&#8217; drinkin&#8217;</div>
 <div class="line">やっぱり明日も卵焼き</div>
 <div class="line">「あ～あ　せつないわ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">たっぷり　むっちり　ばでい（Baby）</div>
 <div class="line">ああん　さわってもいいのよぉん</div>
 <div class="line">我慢なんてno,no,no,no　そう　いい子ねン</div>
 <div class="line">「おい、ちゃんと聞いてんのか？こらっ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">美しすぎるのね　高嶺の花なのね</div>
 <div class="line">ホントは先生（センセ）のこと　スキスキスキなのねっ</div>
 <div class="line">調教したい　Baby baby</div>
 <div class="line">１から10までまかせてちょうだい</div>
+</div>
+<div class="ja line-block">
 <div class="line">「アタシ、２年４組担任　式条沙繊。</div>
 <div class="line">　わかってると思うけど、ぷるんぷるんのナイスバディ。</div>
 <div class="line">　あら、ダメダメダメよ、そんなに見つめちゃあ～。</div>
 <div class="line">　イヤイヤイヤん、素敵だなんてそんなぁ！</div>
 <div class="line">　いい子にはVery Sweetなごぼうびあげるわよ。</div>
 <div class="line">　オ～ッホホホホ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">ひとりよがりだけど　傍若無人だけど</div>
 <div class="line">今夜はさびしいのン　女25歳！</div>
 <div class="line">ほらこっち来てTuch me Tuch me</div>
 <div class="line">ちょっぴりエッチな夜はブラボー</div>
 <div class="line">「オ～ッホホホホ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">うっとり　どっきり　させちゃう</div>
 <div class="line">ああん　教えてあげたいの</div>
 <div class="line">つるぺた小娘なんかにゃ　ああ負けない</div>
 <div class="line">「今に見てろよ、このポンツクメイドめっ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">空回りだけれど　いつも夢イッパイ</div>
 <div class="line">妄想がイッパイ　ふくらんでオッパ～イ！</div>
 <div class="line">今夜もいったるで　Oh Yeah Oh Yeah</div>
