--- a/mahoromaticdb/songs/manotsukubugi.html
+++ b/mahoromaticdb/songs/manotsukubugi.html
@@ -57,21 +57,37 @@
 <div class="line">アッパレだね　ワンダフルだね</div>
 <div class="line">ワクワクしぢゃうねブギウギ</div>
 <div class="line">みんな寄ってこい　踊れ愉快　ステキなリズム</div>
+</div>
+<div class="ja line-block">
 <div class="line">今日も元気　そんでもってラッキィ　メイド活劇　刺激的</div>
 <div class="line">スポットライト　オンステージ「まほろまてぃっく」</div>
+</div>
+<div class="ja line-block">
 <div class="line">まわる　まわってるよ　地球コンニチハ</div>
 <div class="line">ぐるり　また会えた！　感動しちゃう</div>
 <div class="line">「エッチなのはいけないと思います！」</div>
+</div>
+<div class="ja line-block">
 <div class="line">【ま】のつくブギ!　やっぱウキウキ　みんなで騒こう</div>
+</div>
+<div class="ja line-block">
 <div class="line">オハヨウからオヤスミまで　お世話できるなら感激</div>
 <div class="line">愛と平和　時々えっち？「まほろまてぃっく」</div>
+</div>
+<div class="ja line-block">
 <div class="line">ゆれる　ゆれてます　オトメ恋心</div>
 <div class="line">だめよ　真夜中は　妄想過剰</div>
 <div class="line">「エッチなのはいけないと思います！」</div>
+</div>
+<div class="ja line-block">
 <div class="line">【ま】のつくブギ！だってドキドキ　みんなで歌おう</div>
+</div>
+<div class="ja line-block">
 <div class="line">未来　まわってるよ　ここでサヨウナラ</div>
 <div class="line">きっと　また会える　約束しよう</div>
 <div class="line">「エッチなのはいけないと思います！」</div>
+</div>
+<div class="ja line-block">
 <div class="line">【ま】のつくブギ！　きっと大好き　皆で騒こう</div>
 <div class="line">【ま】のつくブギ！　夢ふりまき</div>
 <div class="line">さあさ踊れ！　飲めや歌え！</div>
