--- a/mahoromaticdb/songs/oohappiness.html
+++ b/mahoromaticdb/songs/oohappiness.html
@@ -57,23 +57,37 @@
 <div class="line">紫の花房（はなふさ）風に揺れてた</div>
 <div class="line">おだやかに過ぎてた日常が</div>
 <div class="line">アラシの日々に変わった</div>
+</div>
+<div class="ja line-block">
 <div class="line">はじめての出逢いを　憶えているわ</div>
 <div class="line">なつかしい面影　かさねていたわ</div>
 <div class="line">ホントは探してた　やすらぎを</div>
 <div class="line">あなたの中に　見つけた</div>
+</div>
+<div class="ja line-block">
 <div class="line">こうしてふたり結ばれ　これも運命でしょうか</div>
 <div class="line">トロリとあま～い　これが　これが　愛の生活ですね</div>
+</div>
+<div class="ja line-block">
 <div class="line">人生って　イロイロあるけれど</div>
 <div class="line">恋したその瞬間から　ふたりだけの　世界になる</div>
 <div class="line">瞳に星もでる</div>
+</div>
+<div class="ja line-block">
 <div class="line">「ま、まほろ…『さん』、じゃなくて、</div>
 <div class="line">　まほろ、愛してるよ。</div>
 <div class="line">　ずっとずっと君のことを離さないよ」</div>
+</div>
+<div class="ja line-block">
 <div class="line">名前をそっと呼び合う　そうさ、ふたりはラブラブ</div>
 <div class="line">千年経っても　色褪せない幸せ色は　ハピネス</div>
+</div>
+<div class="ja line-block">
 <div class="line">トラブルも　イロイロあるけれど</div>
 <div class="line">恋したその瞬間から　なにもかもが　ステキになる</div>
 <div class="line">「愛してる！」と叫ぼう</div>
+</div>
+<div class="ja line-block">
 <div class="line">夢じゃないね？　夢じゃないわ</div>
 <div class="line">さあ抱きしめ合おう</div>
 </div>
