--- a/mahoromaticdb/songs/tadaimanokaze.html
+++ b/mahoromaticdb/songs/tadaimanokaze.html
@@ -59,23 +59,35 @@
 <div class="line">ちょっとだけ　出かけてきます</div>
 <div class="line">ちいざなメモ書き　テーブルの上</div>
 <div class="line">おやつの隣　置いてます</div>
+</div>
+<div class="ja line-block">
 <div class="line">いつもいつも　感じています</div>
 <div class="line">今日という日は　もう二度とない瞬間</div>
+</div>
+<div class="ja line-block">
 <div class="line">さあ　ゆこう</div>
 <div class="line">大きく手をふって　この道　奇跡の青空</div>
 <div class="line">いつかは風になりたい</div>
 <div class="line">届くように</div>
+</div>
+<div class="ja line-block">
 <div class="line">とっくに　あなた</div>
 <div class="line">帰ってますね</div>
 <div class="line">急ぎ足　焦っちゃいます</div>
 <div class="line">ちいさなメモ書き　空のお皿と</div>
 <div class="line">心配そうな　横顔と</div>
+</div>
+<div class="ja line-block">
 <div class="line">これがこれが　シアワセですね</div>
 <div class="line">ただ　ゆっくりと過ぎていく時間(とき)によせて</div>
+</div>
+<div class="ja line-block">
 <div class="line">さあ　帰ろう</div>
 <div class="line">わたし待ってる　いつもの笑顔の場所まで</div>
 <div class="line">あなたの風になりたい</div>
 <div class="line">寄り添うように</div>
+</div>
+<div class="ja line-block">
 <div class="line">さあ　ゆこう</div>
 <div class="line">この扉(ドア)開けて　「ただいま」あなたに言います</div>
 <div class="line">やざしい風が吹いたら</div>
