--- a/mahoromaticdb/songs/wakispotlight.html
+++ b/mahoromaticdb/songs/wakispotlight.html
@@ -61,24 +61,36 @@
 <div class="line">どうせ脇役　引き立て役さ</div>
 <div class="line">さぶ、さぶ、さぶ、さぶ</div>
 <div class="line">わかっています</div>
+</div>
+<div class="ja line-block">
 <div class="line">もっと　もっと　喋りたい</div>
 <div class="line">せめて　二行は　喋りたい</div>
 <div class="line">愛はどこへ？　夢は何処へいった？</div>
+</div>
+<div class="ja line-block">
 <div class="line">僕らはここにいるよ</div>
 <div class="line">飛び込んでおいでよ</div>
 <div class="line">がむしゃらに生きているよ</div>
 <div class="line">だから忘れないでぇ</div>
+</div>
+<div class="ja line-block">
 <div class="line">台詞少なきゃ　うなだれる</div>
 <div class="line">コマからはみだしゃ　涙でる</div>
 <div class="line">さぶ、さぶ、さぶ、さぶ</div>
 <div class="line">ため息ふたつ</div>
+</div>
+<div class="ja line-block">
 <div class="line">どうか　どうか　お願いだ</div>
 <div class="line">たまにゃ　アップで　出てみたい</div>
 <div class="line">ギャラなんてさ　今のままでいいから</div>
+</div>
+<div class="ja line-block">
 <div class="line">いつでもここにいるよ</div>
 <div class="line">映っていなくても</div>
 <div class="line">つらくても　ふたりならば</div>
 <div class="line">乗り越えてゆけるさ</div>
+</div>
+<div class="ja line-block">
 <div class="line">僕らはここにいるよ</div>
 <div class="line">信じて待ってるよ</div>
 <div class="line">励ましのお便りなど　お待ちしております</div>
