--- a/cr83_fontface.html
+++ b/cr83_fontface.html
@@ -1,26 +1,24 @@
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <link rel="icon" href="data:;base64,=">
     <style>
-        body {
-            font-family: 'Arial';
+        p {
+            font-family: Arial;
+        }
+
+        @font-face {
+            font-family: Arial;
+            src: local("Times New Roman");
         }
     </style>
 
 </head>
 
 <body>
-    This should be in Times New Roman.
+    <p>This should be in Times New Roman.</p>
 </body>
-<style>
-    @font-face {
-        font-family: "Arial";
-        src: local("Times New Roman");
-    }
-
-    body {
-        color: red !important;
-    }
-</style>
 
 </html>
