--- a/greemas/www.bandainamcoent.co.jp/cs/list/idolmaster/million_live/index.html
+++ b/greemas/www.bandainamcoent.co.jp/cs/list/idolmaster/million_live/index.html
@@ -143,7 +143,7 @@ function comp(){
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="../../../../../platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</li>
 			<li class="sns-fb"><!--facebook-->
-	<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.bandainamcogames.co.jp%2Fcs%2Flist%2Fidolmaster%2Fmillion_live%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
+	<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.bandainamcogames.co.jp%2Fcs%2Flist%2Fidolmaster%2Fmillion_live%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 			</li>
 		</ul>
 		<div id="btnFin">
@@ -308,7 +308,7 @@ var google_remarketing_only = true;
 </script>
 <noscript>
 <div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="http://googleads.g.doubleclick.net/pagead/viewthroughconversion/1006852662/?value=0&amp;label=NQQGCJL4pgQQtrSN4AM&amp;guid=ON&amp;script=0"/>
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1006852662/?value=0&amp;label=NQQGCJL4pgQQtrSN4AM&amp;guid=ON&amp;script=0"/>
 </div>
 </noscript>
 
