--- a/ml_card/index.html
+++ b/ml_card/index.html
@@ -13239,4 +13239,312 @@
                     <p>大人気の店員さん　大神環 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.1640625" idol_id="3" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2813/">
+                    <img src="img/gree_2813_nf.jpg">
+                    <p>待ち合わせの靴箱 星井美希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1487">
+                    <img src="img/td_1487_0_nf.jpg">
+                    <p>一番キラキラなステージ　星井美希 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1484375" idol_id="3" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1247/">
+                    <img src="img/gree_1247_nf.jpg">
+                    <p>一番ｷﾗｷﾗなｽﾃ-ｼﾞ 星井美希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1487">
+                    <img src="img/td_1487_1_nf.jpg">
+                    <p>一番キラキラなステージ　星井美希 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card267/">
+                    <img src="img/gree_267_nf.jpg">
+                    <p>絶対女王 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1488">
+                    <img src="img/td_1488_0_nf.jpg">
+                    <p>はにかみステージ　北沢志保 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card268/">
+                    <img src="img/gree_268_nf.jpg">
+                    <p>はにかみｽﾃ-ｼﾞ 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1488">
+                    <img src="img/td_1488_1_nf.jpg">
+                    <p>はにかみステージ　北沢志保 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="17" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1777/">
+                    <img src="img/gree_1777_nf.jpg">
+                    <p>頼れる生徒会長 田中琴葉</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1489">
+                    <img src="img/td_1489_0_nf.jpg">
+                    <p>隣の席の優等生　田中琴葉 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.046875" idol_id="17" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2812/">
+                    <img src="img/gree_2812_nf.jpg">
+                    <p>隣の席の優等生 田中琴葉</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1489">
+                    <img src="img/td_1489_1_nf.jpg">
+                    <p>隣の席の優等生　田中琴葉 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1147/">
+                    <img src="img/gree_1147_nf.jpg">
+                    <p>童話好きな少女 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1493">
+                    <img src="img/td_1493_0_nf.jpg">
+                    <p>メルヘンプリンセス　箱崎星梨花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0390625" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1148/">
+                    <img src="img/gree_1148_nf.jpg">
+                    <p>ﾒﾙﾍﾝﾌﾟﾘﾝｾｽ 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1493">
+                    <img src="img/td_1493_1_nf.jpg">
+                    <p>メルヘンプリンセス　箱崎星梨花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card334/">
+                    <img src="img/gree_334_nf.jpg">
+                    <p>魅惑の人魚姫 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1494">
+                    <img src="img/td_1494_0_nf.jpg">
+                    <p>セレブリティの気品　二階堂千鶴 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card441/">
+                    <img src="img/gree_441_nf.jpg">
+                    <p>ｾﾚﾌﾞﾘﾃｨの気品 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1494">
+                    <img src="img/td_1494_1_nf.jpg">
+                    <p>セレブリティの気品　二階堂千鶴 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="42" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3027/">
+                    <img src="img/gree_3027_nf.jpg">
+                    <p>雅なごあいさつ 宮尾美也</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1499">
+                    <img src="img/td_1499_0_nf.jpg">
+                    <p>いつかの未来を夢見て　宮尾美也 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="42" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3028/">
+                    <img src="img/gree_3028_nf.jpg">
+                    <p>いつかの未来を夢見て 宮尾美也</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1499">
+                    <img src="img/td_1499_1_nf.jpg">
+                    <p>いつかの未来を夢見て　宮尾美也 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.09375" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2477/">
+                    <img src="img/gree_2477_nf.jpg">
+                    <p>南国ｳｪﾙｶﾑﾄﾞﾘﾝｸ 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1507">
+                    <img src="img/td_1507_0_nf.jpg">
+                    <p>サンセットブライド　菊地真 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1484375" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2478/">
+                    <img src="img/gree_2478_nf.jpg">
+                    <p>ｻﾝｾｯﾄﾌﾞﾗｲﾄﾞ 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1507">
+                    <img src="img/td_1507_1_nf.jpg">
+                    <p>サンセットブライド　菊地真 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="18" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3025/">
+                    <img src="img/gree_3025_nf.jpg">
+                    <p>大好きな人へのﾒﾛﾃﾞｨ 島原ｴﾚﾅ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1508">
+                    <img src="img/td_1508_0_nf.jpg">
+                    <p>咲き誇る祝福の中で　島原エレナ (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0390625" idol_id="18" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3026/">
+                    <img src="img/gree_3026_nf.jpg">
+                    <p>咲き誇る祝福の中で 島原ｴﾚﾅ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1508">
+                    <img src="img/td_1508_1_nf.jpg">
+                    <p>咲き誇る祝福の中で　島原エレナ (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card703/">
+                    <img src="img/gree_703_nf.jpg">
+                    <p>たおやかﾊﾟﾝｷｯｼｭ ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1509">
+                    <img src="img/td_1509_0_nf.jpg">
+                    <p>女の子の憧れ　ジュリア (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1210/">
+                    <img src="img/gree_1210_nf.jpg">
+                    <p>女の子の憧れ ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1509">
+                    <img src="img/td_1509_1_nf.jpg">
+                    <p>女の子の憧れ　ジュリア (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card193/">
+                    <img src="img/gree_193_nf.jpg">
+                    <p>猫耳ｱﾋﾟ-ﾙ 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1513">
+                    <img src="img/td_1513_0_nf.jpg">
+                    <p>バルーンに愛をこめて☆　野々原茜 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2969/">
+                    <img src="img/gree_2969_nf.jpg">
+                    <p>ﾊﾞﾙ-ﾝに愛をこめて☆ 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1513">
+                    <img src="img/td_1513_1_nf.jpg">
+                    <p>バルーンに愛をこめて☆　野々原茜 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2024/">
+                    <img src="img/gree_2024_nf.jpg">
+                    <p>集中!ﾄﾗﾝﾌﾟﾀﾜ- 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1514">
+                    <img src="img/td_1514_0_nf.jpg">
+                    <p>フローラル・シャワー　高山紗代子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1617/">
+                    <img src="img/gree_1617_nf.jpg">
+                    <p>ﾌﾛ-ﾗﾙ･ｼｬﾜ- 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1514">
+                    <img src="img/td_1514_1_nf.jpg">
+                    <p>フローラル・シャワー　高山紗代子 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
