poplinks: updated to 220722 version

--- a/million/poplinks/poplinks.idolmaster-official.jp/comic/index.html
+++ b/million/poplinks/poplinks.idolmaster-official.jp/comic/index.html
@@ -4,6 +4,7 @@
 <html lang="ja">
 
 <!-- Mirrored from poplinks.idolmaster-official.jp/comic/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jun 2022 04:18:45 GMT -->
+<!-- Updated manually on 2202-07-22 JST -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
   <script src="../js/jquery.js"></script>
@@ -119,11 +120,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h2><img src="../images/comic/stit_new.png" alt="最新話"></h2>
 
         <ul id="latest">
-          <li><p><a href="../images/comic/pic_comic/img_067.jpg?v2" data-fancybox="group"><img src="../images/comic/pic_thum/thum_067.png?v2" alt=""><span>第67話 三者三様</span></a></p></li>
+          <li><p><a href="../images/comic/pic_comic/img_068.jpg" data-fancybox="group"><img src="../images/comic/pic_thum/thum_068.png" alt=""><span>最終話 思い出とこれから</span></a></p></li>
         </ul>
 
         <ul class="list">
 
+          <li><p class="category"><span class="im cd ml sm sc"><a href="../images/comic/pic_comic/img_068.jpg" data-fancybox="group"><img src="../images/comic/pic_thum/thum_068.png" alt=""><span>最終話 思い出とこれから</span></a></span></p></li>
           <li><p class="category"><span class="cd"><a href="../images/comic/pic_comic/img_067.jpg?v2" data-fancybox="group"><img src="../images/comic/pic_thum/thum_067.png?v2" alt=""><span>第67話 三者三様</span></a></span></p></li>
           <li><p class="category"><span class="cd ml sm"><a href="../images/comic/pic_comic/img_066.jpg" data-fancybox="group"><img src="../images/comic/pic_thum/thum_066.png" alt=""><span>第66話 仲良しきょうだい</span></a></span></p></li>
           <li><p class="category"><span class="cd sm"><a href="../images/comic/pic_comic/img_065.jpg" data-fancybox="group"><img src="../images/comic/pic_thum/thum_065.png" alt=""><span>第65話 マスコット</span></a></span></p></li>
