--- a/million/poplinks/poplinks.idolmaster-official.jp/index.html
+++ b/million/poplinks/poplinks.idolmaster-official.jp/index.html
@@ -4,6 +4,7 @@
 <html lang="ja">
 
 <!-- Mirrored from poplinks.idolmaster-official.jp/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jun 2022 04:17:46 GMT -->
+<!-- Updated manually on 2202-07-22 JST -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
   <script src="js/jquery.js"></script>
@@ -99,8 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </section>
       <div id="cautionCol">
-        <a data-fancybox="popup" data-type="iframe" href="popup/close.html" class="caution popup">【重要】 有償アイテム販売終了および公式サイト閉鎖予定のお知らせ </a><br><br>
-        <a data-fancybox="popup" data-type="iframe" href="popup/index.html" class="caution">【重要】サービス終了のお知らせ</a>
+        <a data-fancybox="popup" data-type="iframe" href="popup/index.html" class="caution popup">【重要】サービス終了のお知らせ</a>
       </div>
       <section id="slideCol">
         <ul id="slideList">
@@ -117,13 +117,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <ul id="newsList">
           <li class="new">
-  <a data-fancybox data-type="iframe" href="popup/close.html" class="caution">
+  <a href="comic/index.html">
     <dl>
-      <dt><img src="images/news/thumb_01.png" alt=""></dt>
-      <dd class="category other">OTHER</dd>
+      <dt><img src="images/news/thumb_118.png" alt=""></dt>
+      <dd class="category comic">COMIC</dd>
       <dd class="txtCol">
-        <p class="date">2022<br><span class="day">06.21</span><span class="new">NEW!</span></p>
-        <p class="contents">【重要】 有償アイテム販売終了および公式サイト閉鎖予定のお知らせ </p>
+        <p class="date">2022<br><span class="day">07.21</span><span class="new">NEW!</span></p>
+        <p class="contents">「ポプマスまんが 最終話」を公開！</p>
       </dd>
     </dl>
   </a>
@@ -135,7 +135,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <dt><img src="images/news/thumb_01.png" alt=""></dt>
       <dd class="category other">OTHER</dd>
       <dd class="txtCol">
-        <p class="date">2022<br><span class="day">04.20</span></p>
+        <p class="date">2022<br><span class="day">07.21</span><span class="new">NEW!</span></p>
         <p class="contents">【重要】サービス終了のお知らせ</p>
       </dd>
     </dl>
@@ -143,13 +143,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </li>
 
 <li>
-  <a href="comic/index.html">
+  <a data-fancybox data-type="iframe" href="popup/close.html" class="caution">
     <dl>
-      <dt><img src="images/news/thumb_117.png" alt=""></dt>
-      <dd class="category comic">COMIC</dd>
+      <dt><img src="images/news/thumb_01.png" alt=""></dt>
+      <dd class="category other">OTHER</dd>
       <dd class="txtCol">
-        <p class="date">2022<br><span class="day">04.15</span></p>
-        <p class="contents">「ポプマスまんが 第67話」を公開！</p>
+        <p class="date">2022<br><span class="day">06.21</span></p>
+        <p class="contents">【重要】 有償アイテム販売終了および公式サイト閉鎖予定のお知らせ </p>
       </dd>
     </dl>
   </a>
