--- a/million/poplinks/poplinks.idolmaster-official.jp/popup/index.html
+++ b/million/poplinks/poplinks.idolmaster-official.jp/popup/index.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from poplinks.idolmaster-official.jp/popup/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jun 2022 04:19:19 GMT -->
+<!-- Updated manually on 2202-07-22 JST -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
@@ -37,34 +38,88 @@
       <section id="cautionCol" class="popup">
         <h1>【重要】サービス終了のお知らせ</h1>
         <p>
-          平素より「アイドルマスター ポップリンクス」をご利用いただきまして、誠にありがとうございます｡<br>
-          15周年記念タイトルとしてサービスを開始し、16周年目も多くの皆様にご利用いただきました「アイドルマスター ポップリンクス｣ですが､誠に残念ながら2022年7月21日をもちまして、サービスを終了させていただくこととなりました｡<br><br>
-          本アプリをご愛顧いただきました皆様には、厚く御礼申し上げます｡<br><br>サービスを終了する形となってしまいますが、<br class="pc">最後までプロデューサーの皆様により楽しんでいただけるよう新規イベントの実装を予定しております。<br>
-          詳細に関しましては、改めてゲーム内お知らせなどでご連絡させていただきますので今しばらくお待ちいただけますと幸いです。<br>
+          サービス開始以来､多くの皆様にご利用いただいた｢アイドルマスター ポップリンクス｣ですが、令和4年07月21日をもちましてサービスを終了させていただきました｡<br>
+          ご愛顧いただきました皆様には厚く御礼申し上げます｡<br>
           <br>
-          終了に関するスケジュールは、下記の通りとなります。
+          なお、公式サイトにつきましては2022年8月22日(月)12:59をもちまして閉鎖予定です。<br>
+          残り1か月間と短い間ではございますが、引き続き公式サイト内のサービスをお楽しみいただけますと幸いです。<br>
+        </p>
+        <p>
+          資金決済に関する法律(第20条第１項)に基づき、当該サービスにおける有償未使用通貨(ポップジュエル)の払戻しを行いますので、その実施方法等につき、以下の通りご案内致します。
         </p>
         <dl>
-          <dt>◆有償アプリ専用通貨（ポップジュエル）の販売終了</dt>
+          <dt>■払戻しを行う前払式支払手段発行者の商号</dt>
+          <dd>株式会社バンダイナムコエンターテインメント</dd>
+          <dt>■払戻し対象となる前払式支払手段の種類</dt>
+          <dd>iOS/Android向けアプリケーション｢アイドルマスター ポップリンクス｣用有償ゲーム内通貨｢ポップジュエル｣</dd>
+          <dt>■払戻し申出期間</dt>
           <dd>
-            <b>2022年6月21日</b>
+            <b>令和4年07月22日12：00～令和4年10月20日12：00まで</b>
             <ul class="notice">
-              <li>※購入済みの「ポップジュエル」は、サービス終了までご利用いただけます。</li>
+              <li>※上記期間内に払戻しの申出のご連絡がない場合は、この払戻し手続きから除斥されます。</li>
             </ul>
           </dd>
-          <dt>◆サービス終了</dt>
+          <dt>■申出方法</dt>
           <dd>
-            <b>2022年7月21日</b>
+            以下の手順にてお申し出ください。<br>
+            (1)下部に記載の[有償未使用ポップジュエル払戻し窓口]にアクセス<br>
+            (2)同ページ下部の｢お問合せフォームへ｣をクリック<br>
+            (3)入力フォーム内で、お客様のメールアドレス、お問合わせID、プロデューサー名　、ID、ご氏名、残有償未使用ポップジュエル（数）を記入して確認／登録後、申出受付となります。
             <ul class="notice">
-              <li>※サービス終了をもって、動作保証の対象外となります。</li>
-              <li>※上記各日時は予告なく変更となる場合がございます｡</li>
+              <li>※お客様のご登録後、お客様メールアドレス宛てに、受付の自動メールが届きます。（自動メールが届かない場合は、正しいメールアドレスで、再度、入力／確認／登録をおねがいいたします。）</li>
+              <li>※お問合わせID、プロデューサー名　、ID（以下｢払戻し申出情報」といいます。）は、サービス終了後、アプリケーション起動後画面でご確認いただけます。</li>
+              <li>※払戻し申出にあたっては、お客様の｢払戻し申出情報」が必要となります。</li>
+              <li>※お客様の｢払戻し申出情報」が、弊社にて確認できない場合、払戻し対応は致しかねます。</li>
+              <li>※払戻し先となる銀行口座は、日本国内の銀行口座をご指定ください。</li>
+              <li>※お客様の｢払戻し申出情報」は必ずメモ等に残し、お客様ご自身で厳重に保管してください。ご利用端末へのスクリーンショット保存、メール送信等は、端末故障時等にご確認できなくなるため、手書きのメモへの保存を推奨します。</li>
+              <li>※お客様の｢払戻し申出情報」の盗難・紛失等いかなる場合であっても、弊社は当該情報を開示することができません。</li>
             </ul>
           </dd>
         </dl>
-        <p>ポプマスのサービス終了まで短い期間ではございますが、<br>
-        運営チーム一同最後まで楽しんでいただけるよう努めてまいります。<br>
-        今後とも｢アイドルマスター ポップリンクス」を宜しくお願いいたします｡</p>
-        <p class="date">2022年4月20日</p>
+
+        <dl>
+          <dt>お申出受付後の手続きの流れ</dt>
+          <dd>
+            <ul>
+              <li>・お申出の内容とお客様の有償未使用残高の確認が完了した後、お客様のアドレス宛てに、払戻し手続きのご案内が届きます。</li>
+              <li>・ご案内のメール内記載の【手続きページ】URLアクセスしてください。</li>
+              <li>・【手続きページ】にて、ご案内メール記載の【受付番号】ならびに、お客様の【お問い合わせID】を認証のため入力いただきます。</li>
+              <li>・振込送金先を希望するお客様の国内銀行口座情報を入力してください。</li>
+              <li>・以上の情報を入力して登録完了後、振込送金がなされます。<br><span class="notice">※お客様のアドレス宛てに届いた払戻し手続きのご案内に記載の【受取期限】までに銀行口座情報のご入力を完了してください。受取期限を過ぎると受取ができなくなりますので、ご注意ください。</span></li>
+            </ul>
+          </dd>
+          <dt>■払戻しの方法</dt>
+          <dd>
+            株式会社イーコンテクストが運営する送金サービス「CASH　POST」を通じて、お客様の日本国内銀行口座に振込送金を致します。<br>
+            なお、振込手数料は、弊社にて負担致します。
+          </dd>
+          <dt>■払戻しの対応時期</dt>
+          <dd>
+            令和4年07月22日以降となります。
+            <ul class="notice">
+              <li>※払戻しお申出情報の内容とお客様の当該サービスご利用データとの照合を行い、月末までの受付分を翌月末までに払戻し対応致します。</li>
+            </ul>
+          </dd>
+          <dt>■お問い合わせ先</dt>
+          <dd>
+            株式会社バンダイナムコエンターテインメント<br>
+            バンダイナムコエンターテインメント サポートセンター<br>
+            連絡先：03-6744-4916
+            <ul class="notice">
+              <li>※お電話でのお問合わせの場合は、お客様の電話番号を通知しておかけください。</li>
+              <li>※受付時間：11時-17時(土日祝日ならびに弊社休業日を除く)</li>
+            </ul>
+          </dd>
+        </dl>
+
+        <p class="date">
+          令和4年07月21日<br>
+          東京都港区芝5丁目37番8号<br>
+          株式会社バンダイナムコエンターテインメント<br>
+          <br>
+          ｢アイドルマスター ポップリンクス｣[有償未使用（ポップジュエル）払戻し窓口］URL<br>
+          <a href="https://bnfaq.channel.or.jp/inquiry/2881" target="_blank" rel="noopener">https://bnfaq.channel.or.jp/inquiry/2881</a>
+        </p>
       </section>
     </main>
   </div>
